--- a/dataset/sql2csv.ipynb
+++ b/dataset/sql2csv.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -565,15 +565,13 @@
        "1128978             19   30.0 2015-01-01 00:05:51"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_div = []\n",
-    "for row in data:\n",
-    "    data_div.append([row[0], row[1], row[2], row[3]])\n",
+    "data_div = [[row[0], row[1], row[2], row[3]] for row in data]\n",
     "    \n",
     "df = pd.DataFrame(data_div, columns=['variableidref', 'epochtimeinms', 'value', 'fulldate'])\n",
     "df.drop('epochtimeinms', axis=1, inplace=True)\n",
@@ -894,7 +892,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['CONTACT_7', 'CONTACT_13'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check and drop for constant columns\n",
+    "constant_columns = resampled_df.columns[resampled_df.nunique() == 1]\n",
+    "resampled_df = resampled_df.drop(columns=constant_columns)\n",
+    "\n",
+    "print(constant_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
